[package]
name = "srs-client"
version = "0.2.0"
description = "Provides bindings for the main functionalities of the SRS"
authors = ["Serhii Khalymon <serhii.khalymon@pm.me>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eirenik0/srs-client"
documentation = "https://docs.rs/srs-client"
keywords = ["SRS", "callback", "API", "client"]
categories = ["web-programming::http-client"]

[package.metadata.release]
allow-branch = ["main"]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
pre-release-replacements = [
    {file="README.md", search="v[0-9]+\\.[0-9]+\\.[0-9]+", replace="v{{version}}"},
    {file="README.md", search="[0-9]+\\.[0-9]+\\.[0-9]+", replace="{{version}}"},
]

[dependencies]
derive_more = "0.99"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
